deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ml-api-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: ckan
    meta.helm.sh/release-namespace: alternative
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: api-dev.alternative.cst-bg.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ai-ml-api
            port:
              number: 80
  tls:
  - hosts:
    - api-dev.alternative.cst-bg.net
    secretName: cert-ai-ml-api
